--- a/py3/yml/hyperspyPy35/testBAM.html
+++ b/py3/yml/hyperspyPy35/testBAM.html
@@ -192,11 +192,14 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="kn">import</span> <span class="nn">hyperspy.hspy</span> <span class="k">as</span> <span class="nn">hs</span>
+<span class="c1"># import hyperspy.api as hs</span>
 <span class="c1"># set the default figure size</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">rcParams</span><span class="p">[</span><span class="s1">&#39;figure.figsize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">11</span><span class="p">,</span> <span class="mi">7</span>
 
 <span class="nb">print</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">version_info</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">hs</span><span class="o">.</span><span class="n">__version__</span><span class="p">)</span>
+
+<span class="n">bSaveSpectrum</span> <span class="o">=</span> <span class="kc">False</span>
 </pre></div>
 
 </div>
@@ -863,24 +866,11 @@ CYiSCBERERERCYiSCBERERERCcj/AfB6pyao34dhAAAAAElFTkSuQmCC
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">spec</span><span class="o">.</span><span class="n">save</span><span class="p">(</span><span class="s2">&quot;qm-04372-EDS-TM002-10kV.msa&quot;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">if</span> <span class="n">bSaveSpectrum</span><span class="p">:</span>
+    <span class="n">spec</span><span class="o">.</span><span class="n">save</span><span class="p">(</span><span class="s2">&quot;qm-04372-EDS-TM002-10kV.msa&quot;</span><span class="p">)</span>
 </pre></div>
 
 </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>The qm-04372-EDS-TM002-10kV.msa file was created
-</pre>
-</div>
-</div>
-
 </div>
 </div>
 
